fix size and spacing of navbar logo

--- a/style.scss
+++ b/style.scss
@@ -4,10 +4,6 @@
 
 $font-family: "Atkinson Hyperlegible", sans-serif;
 
-.navbar-brand > img {
-  max-height: 36px;
-}
-
 @media screen and (max-width: 767px) {
   .hide-twitter-timeline {
     visibility: hidden;
